--- a/Chart/Chart.csproj
+++ b/Chart/Chart.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8B7122AA-49CD-4854-A831-BE925EFAF881}</ProjectGuid>
+    <ProjectGuid>{28A9CB7C-8679-4CBE-A61B-2DF7A4049C8E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Starter</RootNamespace>
-    <AssemblyName>Starter</AssemblyName>
+    <RootNamespace>Chart</RootNamespace>
+    <AssemblyName>Chart</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,12 +31,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationIcon>kservices.ico</ApplicationIcon>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,16 +45,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form_Starter.cs">
+    <Compile Include="Form_Chart.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Starter.Designer.cs">
-      <DependentUpon>Form_Starter.cs</DependentUpon>
+    <Compile Include="Form_Chart.Designer.cs">
+      <DependentUpon>Form_Chart.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form_Starter.resx">
-      <DependentUpon>Form_Starter.cs</DependentUpon>
+    <EmbeddedResource Include="Form_Chart.resx">
+      <DependentUpon>Form_Chart.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -66,7 +64,6 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -79,20 +76,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FManager\FManager.csproj">
-      <Project>{a5cbe650-adec-4a57-bb13-db300e769e74}</Project>
-      <Name>FManager</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Libs\Libs.csproj">
       <Project>{bd0a866b-edba-47ac-b543-e1b0883e244a}</Project>
       <Name>Libs</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\FManager_version_1.exe" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="kservices.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
